--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,16 +30,22 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.itextpdf-5.3.3.jar=../../Desktop/itextpdf-5.3.3.jar
+file.reference.itextpdf-5.3.3.jar-1=C:\\Users\\Ever Sical\\Desktop\\Restaurante_1\\dist\\lib\\itextpdf-5.3.3.jar
 file.reference.mail.jar=../../Desktop/javamail-1.4.5/mail.jar
 file.reference.mail.jar-1=../../Desktop/javamail-1.4.7/mail.jar
+file.reference.mail.jar-2=C:\\Users\\Ever Sical\\Desktop\\Restaurante_1\\dist\\lib\\mail.jar
 file.reference.mysql-connector-java-8.0.21.jar=../mysql-connector-java-8.0.21.jar
+file.reference.mysql-connector-java-8.0.21.jar-1=C:\\Users\\Ever Sical\\Desktop\\Restaurante_1\\dist\\lib\\mysql-connector-java-8.0.21.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mail.jar}:\
     ${file.reference.mysql-connector-java-8.0.21.jar}:\
     ${file.reference.itextpdf-5.3.3.jar}:\
-    ${file.reference.mail.jar-1}
+    ${file.reference.mail.jar-1}:\
+    ${file.reference.mysql-connector-java-8.0.21.jar-1}:\
+    ${file.reference.mail.jar-2}:\
+    ${file.reference.itextpdf-5.3.3.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
